--- a/src/styles.sass
+++ b/src/styles.sass
@@ -3,3 +3,5 @@
 body, html
     height: 100%;
     margin: 0;
+    font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
+    font-weight: 300;
