--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,3 +3,23 @@
     right: 25px;
     bottom: 25px;
 }
+
+.add-event-modal {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, .5);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.add-event-dialog {
+    box-sizing: border-box;
+    background-color: #FFF;
+    width: 450px;
+    padding: 15px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, .5);
+}
